--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.3",
     "@types/react-slick": "^0.23.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
